data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1616.wast
;; 7. **Test Description:**     A `br_table` within a function that has its indices altered by a complex sequence of stack operations, followed by `unreachable` to check for consistent trapping at unpredictable index values.    **Constraint Checked:** Checks how complex index value generation for `br_table` with subsequent `unreachable` enforces traps.    **Edge Case Relation:** Ensures unpredictably generated indices correctly trigger traps.

(assert_invalid
  (module 
    (func (block
            (block
              (i32.const 1) 
              (i32.const 2) 
              (i32.add) 
              (br_table 0 1 0) 
              (unreachable)
            )
          )
    )
  )
  "type mismatch"
)